--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Typing Game for Kids</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
@@ -25,8 +25,14 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  <button-group></button-group>
+  <typing-stats></typing-stats>
+  <letter-display></letter-display>
+  <sentence-display></sentence-display>
+  <visual-keyboard></visual-keyboard>
+  <reset-button></reset-button>
+  <score-card></score-card>
+  <script type="module" src="js/app.js"></script>
 
 </body>
 
