Add audio and vignette feedback for typing errors
Introduces an AudioManager for low-latency correct/wrong sounds and a VignetteEffect component for visual feedback on typing mistakes. Letter and sentence practice now track and display mistake counts, with improved stats persistence and score card updates. Refactors letter selection to prioritize unpracticed letters and adds support for single letter mode scoring.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <visual-keyboard></visual-keyboard>
   <reset-button></reset-button>
   <score-card></score-card>
+  <vignette-effect></vignette-effect>
   <script type="module" src="js/app.js"></script>
 
 </body>
